syntax = "proto3";

package qclaogui.todo.v1;

import "google/api/client.proto";
import "qclaogui/todo/v1/todo.proto";

option go_package = "github.com/qclaogui/gaip/genproto/todo/apiv1/todopb";

service ToDoService {
  option (google.api.default_host) = "localhost:9095";

  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);

  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse);

  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);

  rpc ListTodo(ListTodoRequest) returns (ListTodoResponse);

  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}
